assets/css/styles.css
@import url("https://fonts.googleapis.com/css?family=Inconsolata|Open+Sans:400,800&display=swap");

:root {
  --background--color: #1a1a1a;
  --color: #fff;
  --faded: #1d1d1d;
}

body {
  background-color: var(--background--color);
  transition: background-color 100ms ease-in-out 450ms,
    color 100ms ease-in-out 450ms;
  color: var(--color);
  font-family: "Inconsolata", monospace;
}

a {
  color: inherit;
  text-decoration: none;
  font-weight: bold;
}

.header {
  width: calc(100% - 30px);
  max-width: 100vw;
  padding-left: 15px;
  padding-right: 15px;
  color: var(--color);
  height: 70px;
  display: flex;
  position: fixed;
  top: 0;
  opacity: 1;
  z-index: 4;
  flex-wrap: nowrap;
  align-items: center;
  background-color: var(--background--color);
  transition: background-color 100ms ease-in-out 450ms,
    color 100ms ease-in-out 450ms;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.05);
  justify-content: space-between;
}

.header > h1 {
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  font-size: 18px;
  line-height: 25px;
  margin-left: 15px;
}

.header > button {
  background-color: #3cba54;
  border-radius: 5px;
  border: 0;
  color: #fff;
  margin-right: 15px;
  width: 126px;
  height: 42px;
}

.header > button > * {
  font-size: 14px;
  line-height: 19px;
  text-align: right;
}

.main_container {
  width: calc(100% - 30px);
  height: auto;
  padding: 0 15px;
  position: relative;
  margin-top: 120px;
}

.switch {
  width: 80px;
  display: flex;
  margin: auto;
  position: fixed;
  top: 0;
  right: 40px;
  z-index: 3;
  height: 35px;
  margin-top: 75px;
  padding: 0 5px;
  justify-content: space-between;
  border-radius: 50px;
  border: 1px solid yellow;
  transition: background-color 100ms ease-in-out 450ms;
}

.switch--light {
  background-color: #fff;
}

.switch--dark {
  background-color: #1d1d1d;
}

.switch__button {
  background-color: transparent;
  border: 0;
  width: 40px;
  padding: 0;
  border-radius: 50%;
  height: 35px;
  transition: transform 500ms ease-in-out, opacity 100ms ease-in-out 450ms;
}

.switch__button--dark {
  transform: translateX(40px);
}

.switch__button--dark--hidden {
  display: none;
}

.switch__button--dark--active {
  transform: translateX(0);
  opacity: 1;
}

.switch__button--light--hidden {
  display: none;
}

.switch__button--light--active {
  transform: translateX(40px);
  opacity: 0;
}

.switch__image {
  max-width: 28px;
  max-height: 28px;
}

.about_me_section,
.work_section,
.teaching_section,
.landing_section,
.contact_me {
  position: relative;
}

.landing_section {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  margin-top: 50px;
  height: 182px;
  min-width: 100%;
  padding-bottom: 18px;
}

.faded_section_name {
  position: absolute;
  top: 0;
  width: 291px;
  height: 182px;
  z-index: -1;
  left: 0;
  align-self: flex-start;
}

.landing_intro,
.landing_transformed_text {
  z-index: 2;
}

.faded_section_name > h1 {
  font-family: "Open Sans", sans-serif;
  font-weight: 800;
  font-size: 75px;
  line-height: 91px;
  color: var(--faded);
  transition: color 100ms ease-in-out 450ms;
}

.landing_intro {
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  font-size: 35px;
  line-height: 42px;
  text-align: right;
  order: 1;
  width: 212px;
  height: 126px;
}

.red {
  color: #db3236;
}

.landing_transformed_text {
  order: 0;
  width: 150px;
  height: 26px;
  font-family: "Inconsolata", monospace;
  font-weight: bold;
  font-size: 12px;
  line-height: 13px;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
  transform: rotate(-90deg) translateX(-97px) translateY(-57px);
}

.about_me_section {
  margin-top: 88px;
  padding-top: 50px;
}

.about_me_section > .faded_section_name {
  font-size: 75px;
  line-height: 91px;
  width: 276px;
  letter-spacing: 0.01em;
  color: var(--faded);
  transition: color 100ms ease-in-out 450ms;
}

.about_main {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: space-between;
  height: auto;
}

.skills {
  width: calc(161px - 20px);
  padding-left: 20px;
  height: 260px;
  padding-top: 20px;
  background-color: var(--faded);
  transition: background-color 100ms ease-in-out 450ms;
  order: 1;
}

.skills > h2 {
  font-family: "Open Sans", sans-serif;
  font-weight: bold;
  font-size: 21px;
  line-height: 25px;
  letter-spacing: 0.01em;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
}

.skills > ul {
  margin-top: 10px;
}

.skills > ul > li {
  font-size: 18px;
  line-height: 36px;
}

.about_info_short {
  font-family: "Open Sans", sans-serif;
  order: 0;
  width: 50%;
  max-width: 180px;
}

.about_info_short > h2 {
  font-weight: 600;
  font-size: 21px;
  line-height: 25px;
  margin-bottom: 12px;
}

.about_info_short > p {
  font-size: 18px;
  line-height: 22px;
}

.about_info_long {
  margin-top: 20px;
  order: 2;
  font-size: 18px;
  line-height: 28px;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
  opacity: 0.9;
}

.about_info_long > p {
  margin-bottom: 15px;
}

.link__text {
  color: rgb(0, 204, 255);
  font-weight: 800;
}

.link__text:hover {
  text-decoration: line-through;
}

.work_section {
  padding-top: 100px;
  margin-top: 100px;
}

.work_section > .faded_section_name {
  width: 291px;
  height: 91px;
  font-size: 75px;
  line-height: 91px;
  letter-spacing: 0.01em;
  color: var(--faded);
  transition: color 100ms ease-in-out 450ms;
}

.work_item {
  margin-bottom: 50px;
}

.project_title > h1 {
  font-family: "Open Sans", sans-serif;
  font-weight: 500;
  font-size: 31px;
  line-height: 36px;
}

.project_title > h6 {
  font-weight: bold;
  font-size: 12px;
  line-height: 36px;
  letter-spacing: 0.02em;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
  opacity: 0.5;
  text-transform: uppercase;
}

.about_project {
  font-size: 18px;
  line-height: 30px;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
  opacity: 0.9;
}

.about_project > h4 {
  font-weight: bold;
  font-family: "Open Sans", sans-serif;
}

.image_container {
  width: 100%;
  height: auto;
  margin: auto;
  margin-top: 30px;
}

.image_container > img {
  max-width: 100%;
  max-height: 100%;
}

.view_project_button {
  width: 140px;
  height: 30px;
  border: 0;
  display: block;
  padding-left: 0;
  margin-left: 0;
  font-weight: 600;
  font-size: 16px;
  line-height: 28px;
  background-color: transparent;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
  margin-top: 10px;
}

.view_project_button > a > svg {
  margin-left: 10px;
}

a:hover {
  font-size: 17px;
}

.view_project_button:hover {
  color: #db3236;
}

.teaching_section {
  margin-top: 30px;
  padding-top: 180px;
}

.teaching_section > .faded_section_name {
  width: 100%;
  max-width: 100vw;
  word-wrap: break-word;
}

.teaching_main > h2 {
  font-family: "Open Sans", sans-serif;
  font-weight: 600;
  font-size: 21px;
  line-height: 25px;
  margin-bottom: 30px;
}

.teaching_item {
  margin-bottom: 25px;
}

.teaching_item > h2 {
  font-size: 18px;
  font-family: "Open Sans", sans-serif;
  margin-bottom: 10px;
  line-height: 25px;
  color: var(--color);
  transition: color 100ms ease-in-out 450ms;
}

.teaching_item > p {
  font-size: 16px;
  line-height: 28px;
}

.contact_me {
  margin-top: 50px;
  padding-top: 150px;
  margin-bottom: 100px;
}

.contact_me > .faded_section_name {
  word-wrap: break-word;
  width: 100%;
  max-width: 100vw;
}

.contact_me > h1 {
  font-weight: 600;
  font-size: 21px;
  line-height: 25px;
  color: #fd5250;
  margin-bottom: 10px;
}

.footer {
  width: 100%;
  height: 30px;
}

.social_icons {
  width: 310px;
  height: 30px;
  margin: auto;
}

.social_icons > a {
  font-size: 20px;
  margin: 0 25px;
}

.social_icons > i:last-of-type {
  margin-right: 0;
}

.flaticon__attribute {
  display: block;
  text-align: center;
  margin: 10px auto;
  margin-bottom: 20px;
}

@media (min-width: 768px) {
  .header {
    left: 0;
  }

  body {
    max-width: 650px;
    margin: auto;
  }

  .landing_section {
    justify-content: space-between;
    margin-bottom: 200px;
  }

  .landing_section > .faded_section_name {
    width: calc(100% - 100px);
    max-width: 650px;
    height: 500px;
  }

  .landing_section > .faded_section_name > h1 {
    font-weight: 800;
    font-size: 150px;
    line-height: 163px;
  }

  .landing_intro {
    font-weight: bold;
    font-size: 80px;
    height: 340px;
    margin-top: 10px;
    line-height: 72px;
    text-align: right;
  }

  .landing_transformed_text {
    font-size: 18px;
    height: 35px;
    line-height: 18px;
    transform: rotate(-90deg) translateX(-167px) translateY(-80px);
    width: 220px;
  }

  .about_me_section > .faded_section_name > h1 {
    font-weight: 800;
    font-size: 150px;
    line-height: 163px;
    letter-spacing: 0.01em;
    color: var(--faded);
    transition: color 100ms ease-in-out 450ms;
  }

  .about_main {
    justify-content: center;
  }

  .about_info_short {
    max-width: 580px;
    width: 100%;
    margin: 0 auto;
    flex-grow: 1;
    margin-bottom: 50px;
    height: 85px;
  }

  .about_info_short > h2 {
    font-weight: 600;
    font-size: 55px;
    text-align: center;
    line-height: 85px;
  }

  .about_info_short > p {
    display: none;
  }

  .skills {
    order: 1;
    width: 100%;
    max-width: 200px;
    height: 280.81px;
    margin-right: 30px;
    margin-top: 55px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  .skills > h2 {
    font-weight: bold;
    width: 100%;
    text-align: center;
    font-size: 32px;
    line-height: 39px;
    letter-spacing: 0.01em;
  }

  .skills > ul {
    margin-top: 0;
  }

  .skills > ul > li {
    font-size: 18px;
    line-height: 36px;
  }

  .about_info_long {
    order: 2;
    font-size: 18px;
    width: calc(60% - 50px);
    padding-left: 30px;
    border-left: 5px solid #0f97a8;
    max-width: 300px;
    line-height: 28px;
  }

  .work_section > .faded_section_name > h1 {
    font-weight: 800;
    font-size: 150px;
    line-height: 163px;
    letter-spacing: 0.01em;
    color: var(--faded);
    transition: color 100ms ease-in-out 450ms;
  }

  .teaching_section {
    padding-top: 100px;
  }

  .teaching_section > .faded_section_name > h1 {
    font-size: 110px;
  }

  .teaching_section > .faded_section_name {
    width: 650px;
  }

  .teaching_main > h2 {
    font-weight: 600;
    font-size: 55px;
    line-height: 85px;
  }

  .teaching_item > h2 {
    font-size: 21px;
    line-height: 29px;
  }

  .teaching_item > p {
    font-size: 16px;
    line-height: 28px;
  }

  .contact_me > h1 {
    font-size: 40px;
    margin-bottom: 20px;
  }
}

@media (min-width: 992px) {
  .header {
    left: 0;
  }

  body {
    max-width: 700px;
    margin: auto;
  }
}

@media (min-width: 1200px) {
  body {
    max-width: 900px;
  }

  .about_info_short {
    max-width: 100%;
  }

  .skills {
    margin-right: 50px;
    margin-top: 50px;
  }

  .about_info_long {
    padding-top: 50px;
    max-width: 600px;
    height: 350px;
  }

  .about_info_long > p {
    margin-bottom: 20px;
  }

  .contact_me {
    margin-top: 30px;
    padding-top: 100px;
    margin-bottom: 100px;
  }
}

